--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -182,11 +182,6 @@ repos:
       hooks:
           - id: pyright
 
-    - repo: https://github.com/pycqa/pydocstyle
-      rev: 6.1.1
-      hooks:
-          - id: pydocstyle
-
     - repo: https://github.com/asottile/add-trailing-comma
       rev: v2.3.0
       hooks:
@@ -204,78 +199,20 @@ repos:
       hooks:
           - id: dead
 
-    - repo: https://github.com/carstencodes/flake518 # Wrapper around flake8 to support pyproject.toml files.
-      rev: 'v1.3.0'
-      hooks:
-          - id: flake518
-            additional_dependencies:
-                - cohesion
-                - flake8-annotations-complexity
-                - flake8-annotations-coverage
-                - flake8-assertive
-                - flake8-bandit
-                - flake8-broken-line
-                - flake8-bugbear
-                - flake8-builtins
-                - flake8-coding
-                - flake8-commas
-                - flake8-comprehensions
-                - flake8-debugger
-                - flake8-deprecated
-                - flake8-docstrings
-                - flake8_dodgy
-                - flake8-eradicate
-                - flake8-fixme
-                - flake8-future-import
-                - flake8-import-order
-                - flake8-imports
-                - flake8-isort
-                - flake8-logging-format
-                - flake8-mock
-                - flake8-mutable
-                - flake8-mypy
-                - flake8-pep3101
-                - flake8-print
-                - flake8-pyi
-                - flake8-quotes
-                - flake8-spellcheck
-                - flake8-strict
-                - flake8-string-format
-                - flake8-tidy-imports
-                - flake8-variables-names
-                - flake8_tuple
-                - pep8-naming
-
     - repo: https://github.com/jendrikseipp/vulture
       rev: v2.6
       hooks:
           - id: vulture
-
-    - repo: https://github.com/pre-commit/mirrors-pylint
-      rev: v3.0.0a5
-      hooks:
-          - id: pylint
 
     - repo: https://github.com/psf/black
       rev: 22.10.0
       hooks:
           - id: black
 
-    - repo: https://gitlab.com/PyCQA/flake8
-      rev: 3.9.2
-      hooks:
-          - id: flake8
-
     - repo: https://github.com/hadialqattan/pycln
       rev: v2.1.1 # Possible releases: https://github.com/hadialqattan/pycln/releases
       hooks:
           - id: pycln
-
-    - repo: https://github.com/pycqa/isort
-      rev: 5.10.1
-      hooks:
-          - id: isort
-            name: isort (python)
 
     - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
       rev: v1.3.0
@@ -318,17 +255,11 @@ repos:
             files: ^requirements/production\.(in|txt)$
             args: [requirements/production.in]
 
-    - repo: https://github.com/asottile/pyupgrade
-      # Automatically upgrade syntax for newer versions of the language.
-      rev: v3.1.0
-      hooks:
-          - id: pyupgrade
-            args: [--py39-plus] # Update if I change the python3 version.
-
     - repo: https://github.com/charliermarsh/ruff-pre-commit
       rev: 'v0.0.263'
       hooks:
           - id: ruff
+            args: [--fix, --force-exclude, --exit-non-zero-on-fix]
 
     # YAML
 
