--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,19 @@
 ---
+default_install_hook_types:
+  - commit-msg
+  - prepare-commit-msg
+  - pre-commit
+  - pre-merge-commit
+  - pre-push
+  - pre-rebase
+  - post-checkout
+  - post-commit
+  - post-merge
+  - post-rewrite
+
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v4.4.0
+      rev: v4.5.0
       hooks:
           # General
           - id: check-added-large-files
@@ -31,13 +43,13 @@ repos:
     # General
 
     - repo: https://github.com/pre-commit/mirrors-prettier
-      rev: v3.0.0-alpha.9-for-vscode
+      rev: v4.0.0-alpha.3-1
       hooks:
           - id: prettier
             stages: [commit]
 
     - repo: https://github.com/sirosen/texthooks
-      rev: 0.5.0
+      rev: 0.6.3
       hooks:
           - id: fix-smartquotes
           - id: fix-ligatures
@@ -56,25 +68,29 @@ repos:
     #      hooks:
     #          - id: pyright
 
-    - repo: https://github.com/psf/black
-      rev: 23.3.0
-      hooks:
-          - id: black
-
     - repo: https://github.com/pre-commit/mirrors-pylint
       rev: v3.0.0a5
       hooks:
           - id: pylint
 
     - repo: https://github.com/hadialqattan/pycln
-      rev: v2.1.3 # Possible releases: https://github.com/hadialqattan/pycln/releases
+      rev: v2.4.0 # Possible releases: https://github.com/hadialqattan/pycln/releases
       hooks:
           - id: pycln
 
     - repo: https://github.com/PyCQA/bandit # Add badge to README!
-      rev: 1.7.5
+      rev: 1.7.6
       hooks:
           - id: bandit
+
+    - repo: https://github.com/astral-sh/ruff-pre-commit
+      rev: 'v0.1.7'
+      hooks:
+          - id: ruff
+            args: [--fix, --force-exclude, --exit-non-zero-on-fix]
+            types_or: [python, pyi, jupyter]  # Run on notebooks too.
+          - id: ruff-format
+            types_or: [python, pyi, jupyter]  # Run on notebooks too.
 
     - repo: https://github.com/pycqa/pydocstyle
       rev: 6.3.0
@@ -82,12 +98,12 @@ repos:
           - id: pydocstyle
 
     - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: v1.2.0
+      rev: v1.7.1
       hooks:
           - id: mypy
 
     - repo: https://github.com/jazzband/pip-tools
-      rev: 6.13.0
+      rev: 7.3.0
       hooks:
           - id: pip-compile
             files: ^requirements/production\.(in|txt)$
@@ -113,33 +129,33 @@ repos:
           - id: text-unicode-replacement-char
 
     - repo: https://github.com/asottile/add-trailing-comma
-      rev: v2.4.0
+      rev: v3.1.0
       hooks:
           - id: add-trailing-comma
             args:
                 - --py36-plus
 
     - repo: https://github.com/asottile/dead
-      rev: v1.5.0
+      rev: v1.5.2
       hooks:
           - id: dead
 
     - repo: https://github.com/pycqa/isort
-      rev: 5.12.0
+      rev: 5.13.0
       hooks:
           - id: isort
             name: isort (python)
 
     - repo: https://github.com/asottile/pyupgrade
       # Automatically upgrade syntax for newer versions of the language.
-      rev: v3.3.2
+      rev: v3.15.0
       hooks:
           - id: pyupgrade
 
     # YAML
 
     - repo: https://github.com/adrienverge/yamllint
-      rev: v1.31.0
+      rev: v1.33.0
       hooks:
           - id: yamllint
             args: [-c=.yamllint.yml]
@@ -157,14 +173,14 @@ repos:
           - id: shfmt
 
     - repo: https://github.com/Lucas-C/pre-commit-hooks
-      rev: v1.5.1
+      rev: v1.5.4
       hooks:
           - id: remove-crlf
           - id: remove-tabs
             exclude: .git/COMMIT_EDITMSG
 
     - repo: https://github.com/sirosen/check-jsonschema
-      rev: 0.22.0
+      rev: 0.27.3
       hooks:
           - id: check-github-actions
           - id: check-github-workflows
@@ -180,12 +196,12 @@ repos:
             files: \.rej$
 
     - repo: https://github.com/zricethezav/gitleaks
-      rev: v8.16.3
+      rev: v8.18.1
       hooks:
           - id: gitleaks
 
     - repo: https://github.com/rhysd/actionlint
-      rev: v1.6.24
+      rev: v1.6.26
       hooks:
           - id: actionlint
     #    - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
@@ -194,7 +210,7 @@ repos:
     #          - id: editorconfig-checker
 
     - repo: https://github.com/mxab/pre-commit-trivy.git
-      rev: v0.5.1
+      rev: v0.9.0
       hooks:
           - id: trivyfs-docker
             args:
