--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -3,9 +3,21 @@
 
 # Which of these should have stages?
 
+default_install_hook_types:
+  - commit-msg
+  - prepare-commit-msg
+  - pre-commit
+  - pre-merge-commit
+  - pre-push
+  - pre-rebase
+  - post-checkout
+  - post-commit
+  - post-merge
+  - post-rewrite
+
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v4.3.0
+      rev: v4.5.0
       hooks:
           # General
           - id: check-added-large-files
@@ -48,13 +60,13 @@ repos:
     #       exclude: package.lock.json
 
     - repo: https://github.com/sirosen/texthooks
-      rev: 0.4.0
+      rev: 0.6.3
       hooks:
           - id: fix-smartquotes
           - id: fix-ligatures
 
     - repo: https://github.com/pre-commit/mirrors-prettier
-      rev: v3.0.0-alpha.2
+      rev: v4.0.0-alpha.3-1
       hooks:
           - id: prettier
             stages: [commit]
@@ -62,7 +74,7 @@ repos:
     # Ansible
 
     - repo: https://github.com/ansible-community/ansible-lint.git
-      rev: v6.8.2
+      rev: v6.22.1
       hooks:
           - id: ansible-lint
             stages:
@@ -72,7 +84,7 @@ repos:
     # Docker
 
     - repo: https://github.com/IamTheFij/docker-pre-commit
-      rev: v2.1.1
+      rev: v3.0.1
       hooks:
           - id: docker-compose-check
 
@@ -83,19 +95,19 @@ repos:
             stages: [commit]
 
     - repo: https://github.com/hadolint/hadolint
-      rev: v2.10.0
+      rev: v2.12.1-beta
       hooks:
           - id: hadolint
 
     # Git
 
     - repo: https://github.com/jorisroovers/gitlint
-      rev: v0.17.0
+      rev: v0.19.1
       hooks:
           - id: gitlint
 
     - repo: https://github.com/commitizen-tools/commitizen
-      rev: v2.35.0
+      rev: v3.13.0
       hooks:
           - id: commitizen
             stages: [commit-msg]
@@ -110,7 +122,7 @@ repos:
     # Markdown
 
     - repo: https://github.com/tcort/markdown-link-check
-      rev: v3.10.3
+      rev: v3.11.2
       hooks:
           - id: markdown-link-check
             args:
@@ -146,76 +158,72 @@ repos:
           - id: darglint
 
     - repo: https://github.com/ikamensh/flynt/
-      rev: '0.76'
+      rev: '1.0.1'
       hooks:
           - id: flynt
 
-    - repo: https://github.com/asottile/blacken-docs
-      rev: v1.12.1
+    - repo: https://github.com/asottile/blacken-docs  # FIXME: ruff format?
+      rev: 1.16.0
       hooks:
           - id: blacken-docs
 
     - repo: https://github.com/dosisod/refurb
-      rev: 1.4.0
+      rev: v1.25.0
       hooks:
           - id: refurb
 
     - repo: https://github.com/PyCQA/docformatter
-      rev: v1.5.0
+      rev: v1.7.5
       hooks:
           - id: docformatter
             args: ['--in-place', '--config', './pyproject.toml']
 
     - repo: https://github.com/HunterMcGushion/docstr_coverage
-      rev: v2.2.0
+      rev: v2.3.0
       hooks:
           - id: docstr-coverage
             args: ['--verbose', '4', '.']
+            always_run: false
 
     - repo: https://github.com/MarcoGorelli/auto-walrus
-      rev: v0.2.1
+      rev: v0.2.2
       hooks:
           - id: auto-walrus
 
     - repo: https://github.com/RobertCraigie/pyright-python
-      rev: v1.1.237
+      rev: v1.1.339
       hooks:
           - id: pyright
 
     - repo: https://github.com/asottile/add-trailing-comma
-      rev: v2.3.0
+      rev: v3.1.0
       hooks:
           - id: add-trailing-comma
             args:
                 - --py36-plus
 
     - repo: https://github.com/PyCQA/bandit
-      rev: 1.7.4
+      rev: 1.7.6
       hooks:
           - id: bandit
 
     - repo: https://github.com/asottile/dead
-      rev: v1.5.0
+      rev: v1.5.2
       hooks:
           - id: dead
 
     - repo: https://github.com/jendrikseipp/vulture
-      rev: v2.6
+      rev: v2.10
       hooks:
           - id: vulture
 
-    - repo: https://github.com/psf/black
-      rev: 22.10.0
-      hooks:
-          - id: black
-
     - repo: https://github.com/hadialqattan/pycln
-      rev: v2.1.1 # Possible releases: https://github.com/hadialqattan/pycln/releases
+      rev: v2.4.0 # Possible releases: https://github.com/hadialqattan/pycln/releases
       hooks:
           - id: pycln
 
     - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
-      rev: v1.3.0
+      rev: v1.3.2
       hooks:
           - id: python-safety-dependencies-check
 
@@ -225,7 +233,7 @@ repos:
           - id: absolufy-imports
 
     - repo: https://github.com/pre-commit/pygrep-hooks
-      rev: v1.9.0
+      rev: v1.10.0
       hooks:
           - id: python-check-blanket-noqa
           - id: python-check-blanket-type-ignore
@@ -244,27 +252,30 @@ repos:
           - id: check-poetry # Validates the structure of the pyproject.toml file.
 
     - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: v0.982
+      rev: v1.7.1
       hooks:
           - id: mypy
 
     - repo: https://github.com/jazzband/pip-tools
-      rev: 6.9.0
+      rev: 7.3.0
       hooks:
           - id: pip-compile
             files: ^requirements/production\.(in|txt)$
             args: [requirements/production.in]
 
-    - repo: https://github.com/charliermarsh/ruff-pre-commit
-      rev: 'v0.0.263'
+    - repo: https://github.com/astral-sh/ruff-pre-commit
+      rev: 'v0.1.7'
       hooks:
           - id: ruff
             args: [--fix, --force-exclude, --exit-non-zero-on-fix]
+            types_or: [python, pyi, jupyter]  # Run on notebooks too.
+          - id: ruff-format
+            types_or: [python, pyi, jupyter]  # Run on notebooks too.
 
     # YAML
 
     - repo: https://github.com/adrienverge/yamllint
-      rev: v1.28.0
+      rev: v1.33.0
       hooks:
           - id: yamllint
             args: [-c=.yamllint.yml]
@@ -277,7 +288,7 @@ repos:
     # SQL
 
     - repo: https://github.com/sqlfluff/sqlfluff
-      rev: 1.3.2
+      rev: 3.0.0a4
       hooks:
           - id: sqlfluff-lint
           # For dbt projects, this installs the dbt "extras".
@@ -316,36 +327,36 @@ repos:
           - id: shfmt
 
     - repo: https://github.com/Lucas-C/pre-commit-hooks
-      rev: v1.3.1
+      rev: v1.5.4
       hooks:
           - id: remove-crlf
           - id: remove-tabs
             exclude: .git/COMMIT_EDITMSG
 
     - repo: https://github.com/sirosen/check-jsonschema
-      rev: 0.18.3
+      rev: 0.27.3
       hooks:
           - id: check-github-actions
           - id: check-github-workflows
           - id: check-readthedocs
 
     - repo: https://github.com/zricethezav/gitleaks
-      rev: v8.15.0
+      rev: v8.18.1
       hooks:
           - id: gitleaks
 
     - repo: https://github.com/rhysd/actionlint
-      rev: v1.6.21
+      rev: v1.6.26
       hooks:
           - id: actionlint
 
     - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
-      rev: 2.6.1
+      rev: 2.7.3
       hooks:
           - id: editorconfig-checker
 
     - repo: https://github.com/MarcoGorelli/cython-lint
-      rev: v0.1.10
+      rev: v0.16.0
       hooks:
           - id: cython-lint
 
@@ -380,7 +391,7 @@ repos:
                 ]
 
     - repo: https://github.com/oxsecurity/megalinter
-      rev: v6.12.0
+      rev: v7.7.0
       hooks:
           - id: megalinter-incremental # Faster, less thorough
             stages:
@@ -390,17 +401,17 @@ repos:
                 - push
 
     - repo: https://github.com/streetsidesoftware/cspell-cli
-      rev: v6.12.0
+      rev: v8.1.1
       hooks:
           - id: cspell
 
     - repo: https://github.com/bridgecrewio/checkov/
-      rev: 2.1.273
+      rev: 3.1.27
       hooks:
           - id: checkov
 
     - repo: https://github.com/mxab/pre-commit-trivy.git
-      rev: v0.2.0
+      rev: v0.9.0
       hooks:
           - id: trivyfs-docker
             args:
