--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,7 +43,7 @@ repos:
     # General
 
     - repo: https://github.com/pre-commit/mirrors-prettier
-      rev: v4.0.0-alpha.3-1
+      rev: v4.0.0-alpha.6
       hooks:
           - id: prettier
             stages: [commit]
@@ -84,7 +84,7 @@ repos:
           - id: bandit
 
     - repo: https://github.com/astral-sh/ruff-pre-commit
-      rev: 'v0.1.7'
+      rev: 'v0.1.8'
       hooks:
           - id: ruff
             args: [--fix, --force-exclude, --exit-non-zero-on-fix]
@@ -141,7 +141,7 @@ repos:
           - id: dead
 
     - repo: https://github.com/pycqa/isort
-      rev: 5.13.0
+      rev: 5.13.2
       hooks:
           - id: isort
             name: isort (python)
