--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -66,7 +66,7 @@ repos:
           - id: fix-ligatures
 
     - repo: https://github.com/pre-commit/mirrors-prettier
-      rev: v4.0.0-alpha.3-1
+      rev: v4.0.0-alpha.6
       hooks:
           - id: prettier
             stages: [commit]
@@ -191,7 +191,7 @@ repos:
           - id: auto-walrus
 
     - repo: https://github.com/RobertCraigie/pyright-python
-      rev: v1.1.339
+      rev: v1.1.341
       hooks:
           - id: pyright
 
@@ -264,7 +264,7 @@ repos:
             args: [requirements/production.in]
 
     - repo: https://github.com/astral-sh/ruff-pre-commit
-      rev: 'v0.1.7'
+      rev: 'v0.1.8'
       hooks:
           - id: ruff
             args: [--fix, --force-exclude, --exit-non-zero-on-fix]
@@ -406,7 +406,7 @@ repos:
           - id: cspell
 
     - repo: https://github.com/bridgecrewio/checkov/
-      rev: 3.1.27
+      rev: 3.1.38
       hooks:
           - id: checkov
 
