--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ default_install_hook_types:
 
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v4.5.0
+      rev: v5.0.0
       hooks:
           # General
           - id: check-added-large-files
@@ -43,13 +43,13 @@ repos:
     # General
 
     - repo: https://github.com/pre-commit/mirrors-prettier
-      rev: v4.0.0-alpha.6
+      rev: v4.0.0-alpha.8
       hooks:
           - id: prettier
-            stages: [commit]
+            stages: [pre-commit]
 
     - repo: https://github.com/sirosen/texthooks
-      rev: 0.6.3
+      rev: 0.6.7
       hooks:
           - id: fix-smartquotes
           - id: fix-ligatures
@@ -79,12 +79,12 @@ repos:
           - id: pycln
 
     - repo: https://github.com/PyCQA/bandit # Add badge to README!
-      rev: 1.7.6
+      rev: 1.7.10
       hooks:
           - id: bandit
 
     - repo: https://github.com/astral-sh/ruff-pre-commit
-      rev: 'v0.1.8'
+      rev: 'v0.6.9'
       hooks:
           - id: ruff
             args: [--fix, --force-exclude, --exit-non-zero-on-fix]
@@ -98,12 +98,12 @@ repos:
           - id: pydocstyle
 
     - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: v1.7.1
+      rev: v1.12.0
       hooks:
           - id: mypy
 
     - repo: https://github.com/jazzband/pip-tools
-      rev: 7.3.0
+      rev: 7.4.1
       hooks:
           - id: pip-compile
             files: ^requirements/production\.(in|txt)$
@@ -148,14 +148,14 @@ repos:
 
     - repo: https://github.com/asottile/pyupgrade
       # Automatically upgrade syntax for newer versions of the language.
-      rev: v3.15.0
+      rev: v3.18.0
       hooks:
           - id: pyupgrade
 
     # YAML
 
     - repo: https://github.com/adrienverge/yamllint
-      rev: v1.33.0
+      rev: v1.35.1
       hooks:
           - id: yamllint
             args: [-c=.yamllint.yml]
@@ -173,14 +173,14 @@ repos:
           - id: shfmt
 
     - repo: https://github.com/Lucas-C/pre-commit-hooks
-      rev: v1.5.4
+      rev: v1.5.5
       hooks:
           - id: remove-crlf
           - id: remove-tabs
             exclude: .git/COMMIT_EDITMSG
 
     - repo: https://github.com/sirosen/check-jsonschema
-      rev: 0.27.3
+      rev: 0.29.4
       hooks:
           - id: check-github-actions
           - id: check-github-workflows
@@ -196,12 +196,12 @@ repos:
             files: \.rej$
 
     - repo: https://github.com/zricethezav/gitleaks
-      rev: v8.18.1
+      rev: v8.21.0
       hooks:
           - id: gitleaks
 
     - repo: https://github.com/rhysd/actionlint
-      rev: v1.6.26
+      rev: v1.7.3
       hooks:
           - id: actionlint
     #    - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
@@ -210,10 +210,10 @@ repos:
     #          - id: editorconfig-checker
 
     - repo: https://github.com/mxab/pre-commit-trivy.git
-      rev: v0.9.0
+      rev: v0.12.0
       hooks:
           - id: trivyfs-docker
             args:
                 - --ignore-unfixed
                 - . # last arg indicates the path/file to scan
-            stages: [push]
+            stages: [pre-push]
