--- a/.envrc
+++ b/.envrc
@@ -3,7 +3,7 @@
 # Automatically sets up your devbox environment whenever you cd into this
 # directory via our direnv integration:
 
-if type pyenv >/dev/null 2>&1; then
+if type devbox >/dev/null 2>&1; then
     eval "$(devbox generate direnv --print-envrc)"
 fi
 
