--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -4,16 +4,16 @@
 # Which of these should have stages?
 
 default_install_hook_types:
-  - commit-msg
-  - prepare-commit-msg
-  - pre-commit
-  - pre-merge-commit
-  - pre-push
-  - pre-rebase
-  - post-checkout
-  - post-commit
-  - post-merge
-  - post-rewrite
+    - commit-msg
+    - prepare-commit-msg
+    - pre-commit
+    - pre-merge-commit
+    - pre-push
+    - pre-rebase
+    - post-checkout
+    - post-commit
+    - post-merge
+    - post-rewrite
 
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -51,6 +51,13 @@ repos:
           - id: requirements-txt-fixer
 
     # General
+
+    - repo: https://github.com/lycheeverse/lychee.git
+      rev: v0.15.1
+      hooks:
+          - id: lychee
+          # Optionally include additional CLI arguments
+          # args: ["--no-progress", "--exclude", "file://"]
 
     # - repo: https://github.com/Yelp/detect-secrets
     #   rev: v1.0.3
@@ -119,16 +126,6 @@ repos:
     #   hooks:
     #     - id: jinjalint
 
-    # Markdown
-
-    - repo: https://github.com/tcort/markdown-link-check
-      rev: v3.12.2
-      hooks:
-          - id: markdown-link-check
-            args:
-                - --config
-                - .markdown-link-check.json
-
     # - repo: https://github.com/executablebooks/mdformat
     #   rev: 0.7.14
     #   hooks:
@@ -158,11 +155,11 @@ repos:
           - id: darglint
 
     - repo: https://github.com/ikamensh/flynt/
-      rev: '1.0.1'
+      rev: "1.0.1"
       hooks:
           - id: flynt
 
-    - repo: https://github.com/asottile/blacken-docs  # FIXME: ruff format?
+    - repo: https://github.com/asottile/blacken-docs # FIXME: ruff format?
       rev: 1.19.0
       hooks:
           - id: blacken-docs
@@ -172,17 +169,18 @@ repos:
       hooks:
           - id: refurb
 
-    - repo: https://github.com/PyCQA/docformatter
-      rev: v1.7.5
-      hooks:
-          - id: docformatter
-            args: ['--in-place', '--config', './pyproject.toml']
+    # # Broken for now.
+    # - repo: https://github.com/PyCQA/docformatter
+    #   rev: v1.7.5
+    #   hooks:
+    #       - id: docformatter
+    #         args: ['--in-place', '--config', './pyproject.toml']
 
     - repo: https://github.com/HunterMcGushion/docstr_coverage
       rev: v2.3.2
       hooks:
           - id: docstr-coverage
-            args: ['--verbose', '4', '.']
+            args: ["--verbose", "4", "."]
             always_run: false
 
     - repo: https://github.com/MarcoGorelli/auto-walrus
@@ -264,13 +262,13 @@ repos:
             args: [requirements/production.in]
 
     - repo: https://github.com/astral-sh/ruff-pre-commit
-      rev: 'v0.7.0'
+      rev: "v0.7.0"
       hooks:
           - id: ruff
             args: [--fix, --force-exclude, --exit-non-zero-on-fix]
-            types_or: [python, pyi, jupyter]  # Run on notebooks too.
+            types_or: [python, pyi, jupyter] # Run on notebooks too.
           - id: ruff-format
-            types_or: [python, pyi, jupyter]  # Run on notebooks too.
+            types_or: [python, pyi, jupyter] # Run on notebooks too.
 
     # YAML
 
@@ -366,28 +364,28 @@ repos:
           - id: textlint
             additional_dependencies:
                 [
-                    'textlint',
-                    'textlint-plugin-latex2e',
-                    'textlint-filter-rule-comments',
-                    'textlint-rule-alex',
-                    'textlint-rule-apostrophe',
-                    'textlint-rule-common-misspellings',
-                    'textlint-rule-diacritics',
-                    'textlint-rule-doubled-spaces',
-                    'textlint-rule-editorconfig',
-                    'textlint-rule-en-capitalization',
-                    'textlint-rule-en-spell',
-                    'textlint-rule-max-number-of-lines',
-                    'textlint-rule-no-dead-link',
-                    'textlint-rule-no-empty-section',
-                    'textlint-rule-no-start-duplicated-conjunction',
-                    'textlint-rule-no-todo',
-                    'textlint-rule-stop-words',
-                    'textlint-rule-terminology',
-                    'textlint-rule-write-good',
-                    'textlint-rule-unexpanded-acronym',
-                    '@textlint-rule/textlint-rule-no-duplicate-abbr',
-                    '@textlint-rule/textlint-rule-no-invalid-control-character',
+                    "textlint",
+                    "textlint-plugin-latex2e",
+                    "textlint-filter-rule-comments",
+                    "textlint-rule-alex",
+                    "textlint-rule-apostrophe",
+                    "textlint-rule-common-misspellings",
+                    "textlint-rule-diacritics",
+                    "textlint-rule-doubled-spaces",
+                    "textlint-rule-editorconfig",
+                    "textlint-rule-en-capitalization",
+                    "textlint-rule-en-spell",
+                    "textlint-rule-max-number-of-lines",
+                    "textlint-rule-no-dead-link",
+                    "textlint-rule-no-empty-section",
+                    "textlint-rule-no-start-duplicated-conjunction",
+                    "textlint-rule-no-todo",
+                    "textlint-rule-stop-words",
+                    "textlint-rule-terminology",
+                    "textlint-rule-write-good",
+                    "textlint-rule-unexpanded-acronym",
+                    "@textlint-rule/textlint-rule-no-duplicate-abbr",
+                    "@textlint-rule/textlint-rule-no-invalid-control-character",
                 ]
 
     - repo: https://github.com/oxsecurity/megalinter
@@ -418,7 +416,6 @@ repos:
                 - --ignore-unfixed
                 - . # last arg indicates the path/file to scan
             stages: [pre-push]
-
 # https://github.com/igorshubovych/markdownlint-cli?
 # https://github.com/DavidAnson/markdownlint-cli2#pre-commit?
 # https://github.com/markdownlint/markdownlint?
