--- a/copier-python-template/.prettierrc.json
+++ b/copier-python-template/.prettierrc.json
@@ -1,1 +1,12 @@
-{}
+{
+  "overrides": [
+    {
+      "files": ["*.yaml", "*.yml"],
+      "options": {
+        "printWidth": 120,
+        "useTabs": false,
+        "proseWrap": "always"
+      }
+    }
+  ]
+}
