--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,27 @@
-[tool.bandit.assert_used]
-skips = ['*_test.py', '*test_*.py', '*unittest.py']
-
-[tool.poetry]
+[project]
 name = "copier-python-template"
 version = "0.0.1"
 description = "Copier template for my python projects."
-license = "Unlicense"
-authors = ["Francis T. O'Donovan <proinsias@users.noreply.github.com>"]
-repository = "https://github.com/proinsias/copier-python-template"
-documentation = "https://github.com/proinsias/copier-python-template"
+license = { text = "Unlicense" }
+authors = [{ name = "Francis T. O'Donovan", email = "proinsias@users.noreply.github.com" }]
 readme = "README.md"
+requires-python = ">=3.9,<4.0"
+dependencies = []
 
-[tool.poetry.dependencies]
-python = ">=3.9,<4.0"
+[dependency-groups]
+dev = [
+    "copier>=5.1.0",
+    "pyright>=1.1.275",
+    "pytest>=7.2.0",
+    "yamllint>=1.26.3"
+]
 
-[tool.poetry.dev-dependencies]
-copier = ">=5.1.0"
-pyright = ">=1.1.275"
-pytest = ">=7.2.0"
-yamllint = ">=1.26.3"
-
-[tool.poetry.urls]
+[project.urls]
+Homepage = "https://github.com/proinsias/copier-python-template"
+Repository = "https://github.com/proinsias/copier-python-template"
+Documentation = "https://github.com/proinsias/copier-python-template"
 "Bug Tracker" = "https://github.com/proinsias/copier-python-template/issues"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-
-# FIXME:
-# Add tox.ini stuff here. Including tox config itself!
-# black, coverage, pytest, mypy, vulture,
-
-[tool.darglint]
-docstring_style = 'google'  # Default. Alternatives are 'sphinx' and 'numpy'.
-strictness = 'full'  # Default. Alternatives are 'short' and 'long'.
+requires = ["uv"]
+build-backend = "uv.build"
