--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -56,7 +56,7 @@ repos:
       rev: v0.15.1
       hooks:
           - id: lychee
-          # Optionally include additional CLI arguments
+            args: ["--suggest"]
           # args: ["--no-progress", "--exclude", "file://"]
 
     # - repo: https://github.com/Yelp/detect-secrets
